# capture_window

./: CMakeLists.txt  README.md
capture_window/: CMakeLists.txt  capture_window.cpp  capture_window.h
